- css > 고급 > animation 내용 추가

--- a/assets/kmtemp/transform/css/layout.less
+++ b/assets/kmtemp/transform/css/layout.less
@@ -1505,7 +1505,7 @@ body {background:none;}
 			.ani_box {
 				display:inline-block; position:relative;
 				width:50px; height:72px; margin-top:10px;
-				background-image:url('../../lib/img/sprite-steps.png');
+				background-image:url('/assets/kmtemp/lib/img/sprite-steps.png');
 				animation:steps_play .8s linear infinite;
 				&.steps {animation-timing-function:steps(10);}
 			}
