- css > 고급 > flex 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2674,6 +2674,14 @@
 		.max-w800 {max-width:800px; min-width:100px; width:100%;}
 		.max-w750 {max-width:750px; min-width:100px; width:100%;}
 		.max-w700 {max-width:700px; min-width:100px; width:100%;}
+		.max-w650 {max-width:650px; min-width:100px; width:100%;}
+		.max-w600 {max-width:600px; min-width:100px; width:100%;}
+		.max-w550 {max-width:550px; min-width:100px; width:100%;}
+		.max-w500 {max-width:500px; min-width:100px; width:100%;}
+		.max-w450 {max-width:450px; min-width:100px; width:100%;}
+		.max-w400 {max-width:400px; min-width:100px; width:100%;}
+		.max-w350 {max-width:350px; min-width:100px; width:100%;}
+		.max-w300 {max-width:300px; min-width:100px; width:100%;}
 		figcaption {
 			margin-top:20px; text-align:center;
 			font-size:14px; font-weight:400; color:#666;
