- css > 고급 > flex > 부모 속성 작업 완료

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -966,6 +966,7 @@ mark {
 .el_block {display:block !important;}
 .font-14 {font-size:14px !important;}
 .font-16 {font-size:16px !important;}
+.font-18 {font-size:18px !important;}
 .t_center {text-align:center;}
 .t_left {text-align:left;}
 .t_right {text-align:right;}
@@ -977,4 +978,5 @@ mark {
 	.indent_max {margin-left:16px;}
 	.indent_max_max {margin-left:24px;}
 	.font-16 {font-size:15px;}
+	.font-18 {font-size:16px;}
 }
