--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2578,6 +2578,10 @@
 			//code {background:#fff;}
 			code {color:#444; background:#f9f9f9; word-break:keep-all;}
 		}
+		&.outline p {
+			padding:15px;
+			background:transparent; border:4px solid #eee;
+		}
 		h3 + p, h4 + p, span + p {margin-top:10px;}
 	}
 	@media(max-width:@screen-sm-max){}
@@ -2893,8 +2897,6 @@
 		margin:0;
 		border:0; border-top:1px dotted #ddd;
 	}
-
-
 
 
 	//coming soon
