- css > 고급 > grid > 요약, 함수, 단위 작업해야 함

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2792,7 +2792,7 @@
 				.font-icon; font-size:14px; font-weight:bold;
 				content:"\f35d";
 			}
-			&:hover {color:@blue;}
+			&:hover {color:@blue; text-decoration:underline;}
 		}
 	}
 	@media(max-width:@screen-sm-max){
