--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -955,6 +955,11 @@ mark {
 .t_navy {color:@navy !important;}
 .t_link {color:@link !important;}
 
+.bg_none {background-color:transparent !important;}
+
+.weight-800 {font-weight:500 !important;}
+.weight-700 {font-weight:500 !important;}
+.weight-600 {font-weight:500 !important;}
 .weight-500 {font-weight:500 !important;}
 .weight-400 {font-weight:400 !important;}
 .weight-300 {font-weight:300 !important;}
