--- a/assets/lib/css/uk_sub.css
+++ b/assets/lib/css/uk_sub.css
@@ -1801,6 +1801,18 @@ mark {
 .t_link {
   color: rgba(0, 50, 132, 0.75) !important;
 }
+.bg_none {
+  background-color: transparent !important;
+}
+.weight-800 {
+  font-weight: 500 !important;
+}
+.weight-700 {
+  font-weight: 500 !important;
+}
+.weight-600 {
+  font-weight: 500 !important;
+}
 .weight-500 {
   font-weight: 500 !important;
 }
