- css > 고급 > grid > 부모 속성 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2295,6 +2295,7 @@
 		h3 .fa-css3-alt {margin:5px 0 0; color:@skyBlue;}
 		h3.reference a {font-weight:bold;}
 		h4 {line-height:24px; font-size:16px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
+		h5 {line-height:22px; font-size:15px; color:fade(@navy, 90%); letter-spacing:-0.3px; .weight-500;}
 	}
 	@media(max-width:@screen-md-max){
 		.content_area {
@@ -2323,6 +2324,7 @@
 			h3 .fa-html5,
 			h3 .fa-css3-alt {margin:4px 0 0;}
 			h4 {line-height:20px; font-size:15px;}
+			h5 {line-height:20px; font-size:14px;}
 		}
 	}
 	@media(max-width:@screen-xxs){
