- css > 고급 > grid > 자식 속성 작업 완료

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -951,6 +951,7 @@ mark {
 .t_green {color:@green !important;}
 .t_black {color:#222 !important;}
 .t_orange {color:@orange !important;}
+.t_darkOrange {color:@darkOrange !important;}
 .t_yellow {color:@yellow2 !important;}
 .t_navy {color:@navy !important;}
 .t_link {color:@link !important;}
