--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2678,6 +2678,12 @@
 		padding:20px 15px;
 		border:4px solid #eee; text-align:center;
 		img {max-width:100%; min-width:100px;}
+		.max-w1200 {max-width:1200px; min-width:100px; width:100%;}
+		.max-w1150 {max-width:1150px; min-width:100px; width:100%;}
+		.max-w1100 {max-width:1100px; min-width:100px; width:100%;}
+		.max-w1050 {max-width:1050px; min-width:100px; width:100%;}
+		.max-w1000 {max-width:1000px; min-width:100px; width:100%;}
+		.max-w950 {max-width:950px; min-width:100px; width:100%;}
 		.max-w900 {max-width:900px; min-width:100px; width:100%;}
 		.max-w850 {max-width:850px; min-width:100px; width:100%;}
 		.max-w800 {max-width:800px; min-width:100px; width:100%;}
