--- a/assets/lib/css/less/uk_sub.less
+++ b/assets/lib/css/less/uk_sub.less
@@ -327,3 +327,11 @@
 		}
 	}
 }
+
+
+.grid_info_mv {
+	position:relative;
+	padding-top:56%;
+
+	iframe {position:absolute; left:0; top:0; width:100%; height:100%;}
+}
