--- a/assets/lib/css/uk_sub.css
+++ b/assets/lib/css/uk_sub.css
@@ -2576,4 +2576,15 @@ mark {
     font-size: 15px;
   }
 }
+.grid_info_mv {
+  position: relative;
+  padding-top: 56%;
+}
+.grid_info_mv iframe {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
 /*# sourceMappingURL=uk_sub.css.map */
