--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2291,8 +2291,8 @@
 		}
 		h3 {line-height:28px; font-size:18px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
 		h3 * {line-height:28px;}
-		h3 .fa-html5 {margin:5px 0 0; color:@red;}
-		h3 .fa-css3-alt {margin:5px 0 0; color:@skyBlue;}
+		h3 .fa-html5 {margin:0 0 0; color:@red;}
+		h3 .fa-css3-alt {margin:0 0 0; color:@skyBlue;}
 		h3.reference a {font-weight:bold;}
 		h4 {line-height:24px; font-size:16px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
 		h5 {line-height:22px; font-size:15px; color:fade(@navy, 90%); letter-spacing:-0.3px; .weight-500;}
@@ -2322,7 +2322,7 @@
 			h3 {line-height:22px; font-size:16px;}
 			h3 * {line-height:22px;}
 			h3 .fa-html5,
-			h3 .fa-css3-alt {margin:4px 0 0;}
+			h3 .fa-css3-alt {margin:1px 0 0;}
 			h4 {line-height:20px; font-size:15px;}
 			h5 {line-height:20px; font-size:14px;}
 		}
