--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -977,7 +977,8 @@ mark {
 .t_left {text-align:left;}
 .t_right {text-align:right;}
 @media(max-width:@screen-sm-max){
-	.mt_xxl {margin-top:35px !important;}
+	.mt_xxl {margin-top:40px !important;}
+	.mt_xl {margin-top:35px !important;}
 	.mt_xl {margin-top:30px !important;}
 	.ml_mn {margin-left:-8px !important;}
 	.indent {margin-left:8px;}
