- grid 이미지 작업 중

--- a/assets/lib/css/less/uk_sub.less
+++ b/assets/lib/css/less/uk_sub.less
@@ -355,3 +355,24 @@
 	0%, 49.99% {opacity:0;}
 	50%, 100% {opacity:1;}
 }
+
+
+
+
+.grid {
+	display: grid;
+
+	/* repeat(), CSS 함수 사용법 */
+	grid-template-rows: repeat(2, 1fr);
+	grid-template-columns: repeat(3, 1fr 2fr);
+}
+.grid {
+	display: grid;
+
+	/* repeat(), CSS 함수 사용법 */
+	grid-template-rows: repeat(2, minmax(20px, auto));
+	grid-template-columns: minmax(30px, auto) repeat(3, 1fr);
+}
+
+
+
