- grid 이미지 작업 중

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -945,6 +945,11 @@ mark {
 .indent_max_max {margin-left:75px;}
 .mg_center {margin-left:auto; margin-right:auto;}
 
+.t_111 {color:#111 !important;}
+.t_222 {color:#222 !important;}
+.t_333 {color:#333 !important;}
+.t_444 {color:#444 !important;}
+.t_555 {color:#555 !important;}
 .t_666 {color:#666 !important;}
 .t_777 {color:#777 !important;}
 .t_888 {color:#888 !important;}
@@ -960,6 +965,7 @@ mark {
 .t_darkOrange {color:@darkOrange !important;}
 .t_yellow {color:@yellow2 !important;}
 .t_navy {color:@navy !important;}
+.t_purple {color:@purple !important;}
 .t_link {color:@link !important;}
 
 .bg_none {background-color:transparent !important;}
