--- a/assets/lib/css/less/uk_sub.less
+++ b/assets/lib/css/less/uk_sub.less
@@ -358,6 +358,53 @@
 
 
 
+.grid_flex {
+	.vs_table {
+		display:flex;
+		justify-content:space-between;
+	}
+	.in_table {
+		position:relative;
+		width:calc(50% - 10px);
+		border:4px solid #eee;
+		h5 {
+			position:absolute; left:50%; top:-20px;
+			width:60px; height:26px; line-height:26px; margin-left:-30px;
+			text-align:center;
+			font-size:20px; color:#fff;
+			background:@blue; border-radius:3px;
+			code {color:#fff;}
+		}
+		dl {
+			padding:10px 15px;
+			border-top:1px dashed #ddd;
+			dt {.t_333; .weight-600;}
+			&.h_line {
+				@width:120px;
+				display:flex;
+				dt {width:@width;}
+				dd {width:calc(100% - @width);}
+			}
+		}
+		h5 + dl {border-top:0;}
+		.con_none {padding:10px 15px;}
+	}
+	.img_figure {
+		border:0; padding:0 15px 20px;
+		text-align:left;
+	}
+}
+@media(max-width:@screen-max-max){
+	.grid_flex {
+		.vs_table {
+			display:block;
+		}
+		.in_table {
+			width:100%;
+			&:last-child {margin-top:25px;}
+			}
+		}
+	}
 
 
 
