- 이미지 작업 및 코드 정리 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -351,7 +351,7 @@
 	@hd_layer_timing:cubic-bezier(0.645, 0.045, 0.355, 1);
 
 	.uk_header {
-		position:fixed; left:0; top:0; right:0; z-index:10;
+		position:fixed; left:0; top:0; right:0; z-index:9;
 		height:@hdHeight;
 		transition:background-color .4s/*, transform @hd_layer_time*/;
 		&:before, .hd_progress {
@@ -1112,7 +1112,7 @@
 
 //uk_footer
 	.uk_footer {
-		position:relative; z-index:8; text-align:center;
+		position:relative; z-index:2; text-align:center;
 		.nav {
 			position:relative; padding:56px 0;
 			div {position:relative; display:inline-block; font-size:0;}
@@ -2030,7 +2030,7 @@
 
 	//sub content common
 	@course_padding:50px;
-	.sub_content {.clear; z-index:9; padding-top:@course_padding; padding-bottom:100px;}
+	.sub_content {.clear; padding-top:@course_padding; padding-bottom:100px;}
 	.side_menu_area {.lft; width:250px;}
 	.side_menu_area {
 		position:sticky; top:@hdHeight + @course_padding; z-index:5;
