- 이미지 작업 및 코드 정리 중

--- a/assets/lib/css/less/color.less
+++ b/assets/lib/css/less/color.less
@@ -5,7 +5,8 @@
 @skyBlue: #379ad6;
 @darkBlue: #4961dd;
 
-@red:#e44d26;
+//@red:#e44d26;
+@red:#f12323;
 @orange:#f79d30;
 @darkOrange:#dc8216;
 @green:#00986b;
