--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -173,7 +173,7 @@ mark {
 @edt_bt_margin:14px;
 @edt_btn_left:6px;
 .uk_editor {
-	position:relative; width:100%;
+	position:relative; //width:100%;
 	background:#fff; border:@edt_border_width solid @edt_border_color;
 	.code_wrap * {
 		line-height:20px; letter-spacing:-0.5px;
