--- a/assets/lib/css/uk_sub.css
+++ b/assets/lib/css/uk_sub.css
@@ -448,7 +448,6 @@ mark {
 }
 .uk_editor {
   position: relative;
-  width: 100%;
   background: #fff;
   border: 4px solid #ccc;
 }
@@ -1808,7 +1807,7 @@ mark {
   color: #4961dd !important;
 }
 .t_red {
-  color: #e44d26 !important;
+  color: #f12323 !important;
 }
 .t_green {
   color: #00986b !important;
@@ -2057,7 +2056,7 @@ mark {
   left: 100%;
   line-height: 30px;
   margin-left: 7px;
-  color: #e44d26;
+  color: #f12323;
 }
 .iframe_con {
   position: relative;
@@ -2395,7 +2394,7 @@ mark {
   background: #00986b;
 }
 .flex_direction_compare dd p:nth-child(3) {
-  background: #e44d26;
+  background: #f12323;
 }
 .flex_direction_compare dd p:nth-child(4) {
   background: #f79d30;
