- 애니메이션 수정

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -999,3 +999,12 @@ mark {
 	.font-16 {font-size:15px;}
 	.font-18 {font-size:16px;}
 }
+
+
+.gist_code iframe {
+	overflow-y:hidden;
+	background:red;
+	html, body {
+		margin:0; padding:0;
+	}
+}
