--- a/assets/lib/css/uk_sub.css
+++ b/assets/lib/css/uk_sub.css
@@ -1913,6 +1913,15 @@ mark {
     font-size: 16px;
   }
 }
+.gist_code iframe {
+  overflow-y: hidden;
+  background: red;
+}
+.gist_code iframe html,
+.gist_code iframe body {
+  margin: 0;
+  padding: 0;
+}
 .table_basic {
   border: 4px solid #eee;
 }
